src/compile/__fixtures__/invalid/bad-algorithm/sketch.js
// This is not a valid sketch — missing function sketch() wrapper
const x = 42;
console.log(x);
